[gd_scene load_steps=2 format=3 uid="uid://resourcehud"]

[ext_resource type="Script" path="res://scripts/ResourceHUD.gd" id="1_resource_hud"]

[node name="ResourceHUD" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 126.0
grow_horizontal = 0
mouse_filter = 2
script = ExtResource("1_resource_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Resources" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="WoodLabel" type="Label" parent="MarginContainer/Resources"]
layout_mode = 2
text = "Wood: 0"

[node name="FoodLabel" type="Label" parent="MarginContainer/Resources"]
layout_mode = 2
text = "Food: 0"

[node name="StoneLabel" type="Label" parent="MarginContainer/Resources"]
layout_mode = 2
text = "Stone: 0"

[node name="MetalLabel" type="Label" parent="MarginContainer/Resources"]
layout_mode = 2
text = "Metal: 0"
